# tournapy

./: .gitignore  README.md  pyproject.toml
src/tournapy/: __init__.py  manager.py  tournament.py
src/tournapy/core/: __init__.py  model.py  ruleset.py
src/tournapy/rocketleague/: rank_enum.py
